HW4/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS
    SCOMMENT
    NEWLINE

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> decl_seq stmt_seq
Rule 2     stmt_seq -> stmt stmt_seq
Rule 3     stmt_seq -> empty
Rule 4     stmt -> SE SEMICOLON
Rule 5     stmt -> PRINT LPAREN AE RPAREN SEMICOLON
Rule 6     stmt -> LBRACE decl_seq stmt_seq RBRACE
Rule 7     stmt -> IF AE THEN stmt ELSE stmt
Rule 8     stmt -> IF AE THEN stmt
Rule 9     stmt -> WHILE AE DO stmt
Rule 10    stmt -> FOR LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt
Rule 11    stmt -> DO stmt WHILE AE SEMICOLON
Rule 12    SEOpt -> SE
Rule 13    SEOpt -> empty
Rule 14    AEOpt -> AE
Rule 15    AEOpt -> empty
Rule 16    decl_seq -> decl decl_seq
Rule 17    decl_seq -> empty
Rule 18    decl -> type varlist SEMICOLON
Rule 19    type -> INT
Rule 20    type -> BOOL
Rule 21    varlist -> var COMMA varlist
Rule 22    varlist -> var
Rule 23    var -> IDENTIFIER dimstar
Rule 24    SE -> lhs EQUALS AE
Rule 25    SE -> lhs INCREMENT
Rule 26    SE -> lhs DECREMENT
Rule 27    SE -> INCREMENT lhs
Rule 28    SE -> DECREMENT lhs
Rule 29    lhs -> IDENTIFIER
Rule 30    lhs -> lhs LSQUARE AE RSQUARE
Rule 31    AE -> AE binop AE
Rule 32    AE -> unop AE
Rule 33    AE -> lhs
Rule 34    AE -> SE
Rule 35    AE -> LPAREN AE RPAREN
Rule 36    AE -> INPUT LPAREN RPAREN
Rule 37    AE -> INTCONST
Rule 38    AE -> TRUE
Rule 39    AE -> FALSE
Rule 40    AE -> NEW type dimexpr dimstar
Rule 41    dimexpr -> LSQUARE AE RSQUARE
Rule 42    dimstar -> LSQUARE RSQUARE dimstar
Rule 43    dimstar -> empty
Rule 44    binop -> PLUS
Rule 45    binop -> MINUS
Rule 46    binop -> STAR
Rule 47    binop -> DIV
Rule 48    binop -> MOD
Rule 49    binop -> AND
Rule 50    binop -> OR
Rule 51    binop -> EQUAL
Rule 52    binop -> NEQUAL
Rule 53    binop -> LTHANEQ
Rule 54    binop -> LTHAN
Rule 55    binop -> GTHANEQ
Rule 56    binop -> GTHAN
Rule 57    unop -> MINUS
Rule 58    unop -> NOT
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 49
BOOL                 : 20
COMMA                : 21
DECREMENT            : 26 28
DIV                  : 47
DO                   : 9 11
ELSE                 : 7
EQUAL                : 51
EQUALS               : 24
FALSE                : 39
FOR                  : 10
GTHAN                : 56
GTHANEQ              : 55
IDENTIFIER           : 23 29
IF                   : 7 8
INCREMENT            : 25 27
INPUT                : 36
INT                  : 19
INTCONST             : 37
LBRACE               : 6
LPAREN               : 5 10 35 36
LSQUARE              : 30 41 42
LTHAN                : 54
LTHANEQ              : 53
MINUS                : 45 57
MOD                  : 48
NEQUAL               : 52
NEW                  : 40
NEWLINE              : 
NOT                  : 58
OR                   : 50
PLUS                 : 44
PRINT                : 5
RBRACE               : 6
RPAREN               : 5 10 35 36
RSQUARE              : 30 41 42
SCOMMENT             : 
SEMICOLON            : 4 5 10 10 11 18
STAR                 : 46
THEN                 : 7 8
TRUE                 : 38
UMINUS               : 
WHILE                : 9 11
error                : 

Nonterminals, with rules where they appear

AE                   : 5 7 8 9 11 14 24 30 31 31 32 35 41
AEOpt                : 10
SE                   : 4 12 34
SEOpt                : 10 10
binop                : 31
decl                 : 16
decl_seq             : 1 6 16
dimexpr              : 40
dimstar              : 23 40 42
empty                : 3 13 15 17 43
lhs                  : 24 25 26 27 28 30 33
pgm                  : 0
stmt                 : 2 7 7 8 9 10 11
stmt_seq             : 1 2 6
type                 : 18 40
unop                 : 32
var                  : 21 22
varlist              : 18 21

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . decl_seq stmt_seq
    (16) decl_seq -> . decl decl_seq
    (17) decl_seq -> . empty
    (18) decl -> . type varlist SEMICOLON
    (59) empty -> .
    (19) type -> . INT
    (20) type -> . BOOL

    PRINT           reduce using rule 59 (empty -> .)
    LBRACE          reduce using rule 59 (empty -> .)
    IF              reduce using rule 59 (empty -> .)
    WHILE           reduce using rule 59 (empty -> .)
    FOR             reduce using rule 59 (empty -> .)
    DO              reduce using rule 59 (empty -> .)
    INCREMENT       reduce using rule 59 (empty -> .)
    DECREMENT       reduce using rule 59 (empty -> .)
    IDENTIFIER      reduce using rule 59 (empty -> .)
    $end            reduce using rule 59 (empty -> .)
    INT             shift and go to state 6
    BOOL            shift and go to state 4

    decl                           shift and go to state 1
    decl_seq                       shift and go to state 2
    pgm                            shift and go to state 3
    type                           shift and go to state 5
    empty                          shift and go to state 7

state 1

    (16) decl_seq -> decl . decl_seq
    (16) decl_seq -> . decl decl_seq
    (17) decl_seq -> . empty
    (18) decl -> . type varlist SEMICOLON
    (59) empty -> .
    (19) type -> . INT
    (20) type -> . BOOL

    PRINT           reduce using rule 59 (empty -> .)
    LBRACE          reduce using rule 59 (empty -> .)
    IF              reduce using rule 59 (empty -> .)
    WHILE           reduce using rule 59 (empty -> .)
    FOR             reduce using rule 59 (empty -> .)
    DO              reduce using rule 59 (empty -> .)
    INCREMENT       reduce using rule 59 (empty -> .)
    DECREMENT       reduce using rule 59 (empty -> .)
    IDENTIFIER      reduce using rule 59 (empty -> .)
    $end            reduce using rule 59 (empty -> .)
    RBRACE          reduce using rule 59 (empty -> .)
    INT             shift and go to state 6
    BOOL            shift and go to state 4

    decl                           shift and go to state 1
    decl_seq                       shift and go to state 8
    type                           shift and go to state 5
    empty                          shift and go to state 7

state 2

    (1) pgm -> decl_seq . stmt_seq
    (2) stmt_seq -> . stmt stmt_seq
    (3) stmt_seq -> . empty
    (4) stmt -> . SE SEMICOLON
    (5) stmt -> . PRINT LPAREN AE RPAREN SEMICOLON
    (6) stmt -> . LBRACE decl_seq stmt_seq RBRACE
    (7) stmt -> . IF AE THEN stmt ELSE stmt
    (8) stmt -> . IF AE THEN stmt
    (9) stmt -> . WHILE AE DO stmt
    (10) stmt -> . FOR LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt
    (11) stmt -> . DO stmt WHILE AE SEMICOLON
    (59) empty -> .
    (24) SE -> . lhs EQUALS AE
    (25) SE -> . lhs INCREMENT
    (26) SE -> . lhs DECREMENT
    (27) SE -> . INCREMENT lhs
    (28) SE -> . DECREMENT lhs
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE

    PRINT           shift and go to state 11
    LBRACE          shift and go to state 18
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    FOR             shift and go to state 15
    DO              shift and go to state 9
    $end            reduce using rule 59 (empty -> .)
    INCREMENT       shift and go to state 12
    DECREMENT       shift and go to state 21
    IDENTIFIER      shift and go to state 13

    stmt_seq                       shift and go to state 19
    stmt                           shift and go to state 16
    lhs                            shift and go to state 20
    SE                             shift and go to state 22
    empty                          shift and go to state 14

state 3

    (0) S' -> pgm .



state 4

    (20) type -> BOOL .

    IDENTIFIER      reduce using rule 20 (type -> BOOL .)
    LSQUARE         reduce using rule 20 (type -> BOOL .)


state 5

    (18) decl -> type . varlist SEMICOLON
    (21) varlist -> . var COMMA varlist
    (22) varlist -> . var
    (23) var -> . IDENTIFIER dimstar

    IDENTIFIER      shift and go to state 25

    varlist                        shift and go to state 23
    var                            shift and go to state 24

state 6

    (19) type -> INT .

    IDENTIFIER      reduce using rule 19 (type -> INT .)
    LSQUARE         reduce using rule 19 (type -> INT .)


state 7

    (17) decl_seq -> empty .

    PRINT           reduce using rule 17 (decl_seq -> empty .)
    LBRACE          reduce using rule 17 (decl_seq -> empty .)
    IF              reduce using rule 17 (decl_seq -> empty .)
    WHILE           reduce using rule 17 (decl_seq -> empty .)
    FOR             reduce using rule 17 (decl_seq -> empty .)
    DO              reduce using rule 17 (decl_seq -> empty .)
    INCREMENT       reduce using rule 17 (decl_seq -> empty .)
    DECREMENT       reduce using rule 17 (decl_seq -> empty .)
    IDENTIFIER      reduce using rule 17 (decl_seq -> empty .)
    RBRACE          reduce using rule 17 (decl_seq -> empty .)
    $end            reduce using rule 17 (decl_seq -> empty .)


state 8

    (16) decl_seq -> decl decl_seq .

    PRINT           reduce using rule 16 (decl_seq -> decl decl_seq .)
    LBRACE          reduce using rule 16 (decl_seq -> decl decl_seq .)
    IF              reduce using rule 16 (decl_seq -> decl decl_seq .)
    WHILE           reduce using rule 16 (decl_seq -> decl decl_seq .)
    FOR             reduce using rule 16 (decl_seq -> decl decl_seq .)
    DO              reduce using rule 16 (decl_seq -> decl decl_seq .)
    INCREMENT       reduce using rule 16 (decl_seq -> decl decl_seq .)
    DECREMENT       reduce using rule 16 (decl_seq -> decl decl_seq .)
    IDENTIFIER      reduce using rule 16 (decl_seq -> decl decl_seq .)
    RBRACE          reduce using rule 16 (decl_seq -> decl decl_seq .)
    $end            reduce using rule 16 (decl_seq -> decl decl_seq .)


state 9

    (11) stmt -> DO . stmt WHILE AE SEMICOLON
    (4) stmt -> . SE SEMICOLON
    (5) stmt -> . PRINT LPAREN AE RPAREN SEMICOLON
    (6) stmt -> . LBRACE decl_seq stmt_seq RBRACE
    (7) stmt -> . IF AE THEN stmt ELSE stmt
    (8) stmt -> . IF AE THEN stmt
    (9) stmt -> . WHILE AE DO stmt
    (10) stmt -> . FOR LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt
    (11) stmt -> . DO stmt WHILE AE SEMICOLON
    (24) SE -> . lhs EQUALS AE
    (25) SE -> . lhs INCREMENT
    (26) SE -> . lhs DECREMENT
    (27) SE -> . INCREMENT lhs
    (28) SE -> . DECREMENT lhs
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE

    PRINT           shift and go to state 11
    LBRACE          shift and go to state 18
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    FOR             shift and go to state 15
    DO              shift and go to state 9
    INCREMENT       shift and go to state 12
    DECREMENT       shift and go to state 21
    IDENTIFIER      shift and go to state 13

    stmt                           shift and go to state 26
    lhs                            shift and go to state 20
    SE                             shift and go to state 22

state 10

    (9) stmt -> WHILE . AE DO stmt
    (31) AE -> . AE binop AE
    (32) AE -> . unop AE
    (33) AE -> . lhs
    (34) AE -> . SE
    (35) AE -> . LPAREN AE RPAREN
    (36) AE -> . INPUT LPAREN RPAREN
    (37) AE -> . INTCONST
    (38) AE -> . TRUE
    (39) AE -> . FALSE
    (40) AE -> . NEW type dimexpr dimstar
    (57) unop -> . MINUS
    (58) unop -> . NOT
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE
    (24) SE -> . lhs EQUALS AE
    (25) SE -> . lhs INCREMENT
    (26) SE -> . lhs DECREMENT
    (27) SE -> . INCREMENT lhs
    (28) SE -> . DECREMENT lhs

    LPAREN          shift and go to state 28
    INPUT           shift and go to state 34
    INTCONST        shift and go to state 33
    TRUE            shift and go to state 31
    FALSE           shift and go to state 35
    NEW             shift and go to state 29
    MINUS           shift and go to state 30
    NOT             shift and go to state 37
    IDENTIFIER      shift and go to state 13
    INCREMENT       shift and go to state 12
    DECREMENT       shift and go to state 21

    unop                           shift and go to state 27
    AE                             shift and go to state 32
    lhs                            shift and go to state 36
    SE                             shift and go to state 38

state 11

    (5) stmt -> PRINT . LPAREN AE RPAREN SEMICOLON

    LPAREN          shift and go to state 39


state 12

    (27) SE -> INCREMENT . lhs
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE

    IDENTIFIER      shift and go to state 13

    lhs                            shift and go to state 40

state 13

    (29) lhs -> IDENTIFIER .

    LSQUARE         reduce using rule 29 (lhs -> IDENTIFIER .)
    EQUALS          reduce using rule 29 (lhs -> IDENTIFIER .)
    INCREMENT       reduce using rule 29 (lhs -> IDENTIFIER .)
    DECREMENT       reduce using rule 29 (lhs -> IDENTIFIER .)
    RSQUARE         reduce using rule 29 (lhs -> IDENTIFIER .)
    PLUS            reduce using rule 29 (lhs -> IDENTIFIER .)
    MINUS           reduce using rule 29 (lhs -> IDENTIFIER .)
    STAR            reduce using rule 29 (lhs -> IDENTIFIER .)
    DIV             reduce using rule 29 (lhs -> IDENTIFIER .)
    MOD             reduce using rule 29 (lhs -> IDENTIFIER .)
    AND             reduce using rule 29 (lhs -> IDENTIFIER .)
    OR              reduce using rule 29 (lhs -> IDENTIFIER .)
    EQUAL           reduce using rule 29 (lhs -> IDENTIFIER .)
    NEQUAL          reduce using rule 29 (lhs -> IDENTIFIER .)
    LTHANEQ         reduce using rule 29 (lhs -> IDENTIFIER .)
    LTHAN           reduce using rule 29 (lhs -> IDENTIFIER .)
    GTHANEQ         reduce using rule 29 (lhs -> IDENTIFIER .)
    GTHAN           reduce using rule 29 (lhs -> IDENTIFIER .)
    DO              reduce using rule 29 (lhs -> IDENTIFIER .)
    THEN            reduce using rule 29 (lhs -> IDENTIFIER .)
    RPAREN          reduce using rule 29 (lhs -> IDENTIFIER .)
    SEMICOLON       reduce using rule 29 (lhs -> IDENTIFIER .)


state 14

    (3) stmt_seq -> empty .

    RBRACE          reduce using rule 3 (stmt_seq -> empty .)
    $end            reduce using rule 3 (stmt_seq -> empty .)


state 15

    (10) stmt -> FOR . LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt

    LPAREN          shift and go to state 41


state 16

    (2) stmt_seq -> stmt . stmt_seq
    (2) stmt_seq -> . stmt stmt_seq
    (3) stmt_seq -> . empty
    (4) stmt -> . SE SEMICOLON
    (5) stmt -> . PRINT LPAREN AE RPAREN SEMICOLON
    (6) stmt -> . LBRACE decl_seq stmt_seq RBRACE
    (7) stmt -> . IF AE THEN stmt ELSE stmt
    (8) stmt -> . IF AE THEN stmt
    (9) stmt -> . WHILE AE DO stmt
    (10) stmt -> . FOR LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt
    (11) stmt -> . DO stmt WHILE AE SEMICOLON
    (59) empty -> .
    (24) SE -> . lhs EQUALS AE
    (25) SE -> . lhs INCREMENT
    (26) SE -> . lhs DECREMENT
    (27) SE -> . INCREMENT lhs
    (28) SE -> . DECREMENT lhs
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE

    PRINT           shift and go to state 11
    LBRACE          shift and go to state 18
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    FOR             shift and go to state 15
    DO              shift and go to state 9
    $end            reduce using rule 59 (empty -> .)
    RBRACE          reduce using rule 59 (empty -> .)
    INCREMENT       shift and go to state 12
    DECREMENT       shift and go to state 21
    IDENTIFIER      shift and go to state 13

    stmt_seq                       shift and go to state 42
    stmt                           shift and go to state 16
    lhs                            shift and go to state 20
    SE                             shift and go to state 22
    empty                          shift and go to state 14

state 17

    (7) stmt -> IF . AE THEN stmt ELSE stmt
    (8) stmt -> IF . AE THEN stmt
    (31) AE -> . AE binop AE
    (32) AE -> . unop AE
    (33) AE -> . lhs
    (34) AE -> . SE
    (35) AE -> . LPAREN AE RPAREN
    (36) AE -> . INPUT LPAREN RPAREN
    (37) AE -> . INTCONST
    (38) AE -> . TRUE
    (39) AE -> . FALSE
    (40) AE -> . NEW type dimexpr dimstar
    (57) unop -> . MINUS
    (58) unop -> . NOT
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE
    (24) SE -> . lhs EQUALS AE
    (25) SE -> . lhs INCREMENT
    (26) SE -> . lhs DECREMENT
    (27) SE -> . INCREMENT lhs
    (28) SE -> . DECREMENT lhs

    LPAREN          shift and go to state 28
    INPUT           shift and go to state 34
    INTCONST        shift and go to state 33
    TRUE            shift and go to state 31
    FALSE           shift and go to state 35
    NEW             shift and go to state 29
    MINUS           shift and go to state 30
    NOT             shift and go to state 37
    IDENTIFIER      shift and go to state 13
    INCREMENT       shift and go to state 12
    DECREMENT       shift and go to state 21

    unop                           shift and go to state 27
    AE                             shift and go to state 43
    lhs                            shift and go to state 36
    SE                             shift and go to state 38

state 18

    (6) stmt -> LBRACE . decl_seq stmt_seq RBRACE
    (16) decl_seq -> . decl decl_seq
    (17) decl_seq -> . empty
    (18) decl -> . type varlist SEMICOLON
    (59) empty -> .
    (19) type -> . INT
    (20) type -> . BOOL

    PRINT           reduce using rule 59 (empty -> .)
    LBRACE          reduce using rule 59 (empty -> .)
    IF              reduce using rule 59 (empty -> .)
    WHILE           reduce using rule 59 (empty -> .)
    FOR             reduce using rule 59 (empty -> .)
    DO              reduce using rule 59 (empty -> .)
    INCREMENT       reduce using rule 59 (empty -> .)
    DECREMENT       reduce using rule 59 (empty -> .)
    IDENTIFIER      reduce using rule 59 (empty -> .)
    RBRACE          reduce using rule 59 (empty -> .)
    INT             shift and go to state 6
    BOOL            shift and go to state 4

    decl                           shift and go to state 1
    decl_seq                       shift and go to state 44
    type                           shift and go to state 5
    empty                          shift and go to state 7

state 19

    (1) pgm -> decl_seq stmt_seq .

    $end            reduce using rule 1 (pgm -> decl_seq stmt_seq .)


state 20

    (24) SE -> lhs . EQUALS AE
    (25) SE -> lhs . INCREMENT
    (26) SE -> lhs . DECREMENT
    (30) lhs -> lhs . LSQUARE AE RSQUARE

    EQUALS          shift and go to state 46
    INCREMENT       shift and go to state 45
    DECREMENT       shift and go to state 48
    LSQUARE         shift and go to state 47


state 21

    (28) SE -> DECREMENT . lhs
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE

    IDENTIFIER      shift and go to state 13

    lhs                            shift and go to state 49

state 22

    (4) stmt -> SE . SEMICOLON

    SEMICOLON       shift and go to state 50


state 23

    (18) decl -> type varlist . SEMICOLON

    SEMICOLON       shift and go to state 51


state 24

    (21) varlist -> var . COMMA varlist
    (22) varlist -> var .

    COMMA           shift and go to state 52
    SEMICOLON       reduce using rule 22 (varlist -> var .)


state 25

    (23) var -> IDENTIFIER . dimstar
    (42) dimstar -> . LSQUARE RSQUARE dimstar
    (43) dimstar -> . empty
    (59) empty -> .

    LSQUARE         shift and go to state 55
    COMMA           reduce using rule 59 (empty -> .)
    SEMICOLON       reduce using rule 59 (empty -> .)

    dimstar                        shift and go to state 54
    empty                          shift and go to state 53

state 26

    (11) stmt -> DO stmt . WHILE AE SEMICOLON

    WHILE           shift and go to state 56


state 27

    (32) AE -> unop . AE
    (31) AE -> . AE binop AE
    (32) AE -> . unop AE
    (33) AE -> . lhs
    (34) AE -> . SE
    (35) AE -> . LPAREN AE RPAREN
    (36) AE -> . INPUT LPAREN RPAREN
    (37) AE -> . INTCONST
    (38) AE -> . TRUE
    (39) AE -> . FALSE
    (40) AE -> . NEW type dimexpr dimstar
    (57) unop -> . MINUS
    (58) unop -> . NOT
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE
    (24) SE -> . lhs EQUALS AE
    (25) SE -> . lhs INCREMENT
    (26) SE -> . lhs DECREMENT
    (27) SE -> . INCREMENT lhs
    (28) SE -> . DECREMENT lhs

    LPAREN          shift and go to state 28
    INPUT           shift and go to state 34
    INTCONST        shift and go to state 33
    TRUE            shift and go to state 31
    FALSE           shift and go to state 35
    NEW             shift and go to state 29
    MINUS           shift and go to state 30
    NOT             shift and go to state 37
    IDENTIFIER      shift and go to state 13
    INCREMENT       shift and go to state 12
    DECREMENT       shift and go to state 21

    unop                           shift and go to state 27
    AE                             shift and go to state 57
    lhs                            shift and go to state 36
    SE                             shift and go to state 38

state 28

    (35) AE -> LPAREN . AE RPAREN
    (31) AE -> . AE binop AE
    (32) AE -> . unop AE
    (33) AE -> . lhs
    (34) AE -> . SE
    (35) AE -> . LPAREN AE RPAREN
    (36) AE -> . INPUT LPAREN RPAREN
    (37) AE -> . INTCONST
    (38) AE -> . TRUE
    (39) AE -> . FALSE
    (40) AE -> . NEW type dimexpr dimstar
    (57) unop -> . MINUS
    (58) unop -> . NOT
    (29) lhs -> . IDENTIFIER
    (30) lhs -> . lhs LSQUARE AE RSQUARE
    (24) SE -> . lhs EQUALS AE
    (25) SE -> . lhs INCREMENT
    (26) SE -> . lhs DECREMENT
    (27) SE -> . INCREMENT lhs
    (28) SE -> . DECREMENT lhs

    LPAREN          shift and go to state 28
    INPUT           shift and go to state 34
    INTCONST        shift and go to state 33
    TRUE            shift and go to state 31
    FALSE           shift and go to state 35
    NEW             shift and go to state 29
    MINUS           shift and go to state 30
    NOT             shift and go to state 37
    IDENTIFIER      shift and go to state 13
    INCREMENT       shift and go to state 12
    DECREMENT       shift and go to state 21

    unop                           shift and go to state 27
    AE                             shift and go to state 58
    lhs                            shift and go to state 36
    SE                             shift and go to state 38

state 29

    (40) AE -> NEW . type dimexpr dimstar
    (19) type -> . INT
    (20) type -> . BOOL

    INT             shift and go to state 6
    BOOL            shift and go to state 4

    type                           shift and go to state 59

state 30

    (57) unop -> MINUS .

    LPAREN          reduce using rule 57 (unop -> MINUS .)
    INPUT           reduce using rule 57 (unop -> MINUS .)
    INTCONST        reduce using rule 57 (unop -> MINUS .)
    TRUE            reduce using rule 57 (unop -> MINUS .)
    FALSE           reduce using rule 57 (unop -> MINUS .)
    NEW             reduce using rule 57 (unop -> MINUS .)
    MINUS           reduce using rule 57 (unop -> MINUS .)
    NOT             reduce using rule 57 (unop -> MINUS .)
    IDENTIFIER      reduce using rule 57 (unop -> MINUS .)
    INCREMENT       reduce using rule 57 (unop -> MINUS .)
    DECREMENT       reduce using rule 57 (unop -> MINUS .)


state 31

    (38) AE -> TRUE .

    DO              reduce using rule 38 (AE -> TRUE .)
    PLUS            reduce using rule 38 (AE -> TRUE .)
    MINUS           reduce using rule 38 (AE -> TRUE .)
    STAR            reduce using rule 38 (AE -> TRUE .)
    DIV             reduce using rule 38 (AE -> TRUE .)
    MOD             reduce using rule 38 (AE -> TRUE .)
    AND             reduce using rule 38 (AE -> TRUE .)
    OR              reduce using rule 38 (AE -> TRUE .)
    EQUAL           reduce using rule 38 (AE -> TRUE .)
    NEQUAL          reduce using rule 38 (AE -> TRUE .)
    LTHANEQ         reduce using rule 38 (AE -> TRUE .)
    LTHAN           reduce using rule 38 (AE -> TRUE .)
    GTHANEQ         reduce using rule 38 (AE -> TRUE .)
    GTHAN           reduce using rule 38 (AE -> TRUE .)
    THEN            reduce using rule 38 (AE -> TRUE .)
    RPAREN          reduce using rule 38 (AE -> TRUE .)
    SEMICOLON       reduce using rule 38 (AE -> TRUE .)
    RSQUARE         reduce using rule 38 (AE -> TRUE .)


state 32

    (9) stmt -> WHILE AE . DO stmt
    (31) AE -> AE . binop AE
    (44) binop -> . PLUS
    (45) binop -> . MINUS
    (46) binop -> . STAR
    (47) binop -> . DIV
    (48) binop -> . MOD
    (49) binop -> . AND
    (50) binop -> . OR
    (51) binop -> . EQUAL
    (52) binop -> . NEQUAL
    (53) binop -> . LTHANEQ
    (54) binop -> . LTHAN
    (55) binop -> . GTHANEQ
    (56) binop -> . GTHAN

    DO              shift and go to state 61
    PLUS            shift and go to state 68
    MINUS           shift and go to state 73
    STAR            shift and go to state 70
    DIV             shift and go to state 71
    MOD             shift and go to state 74
    AND             shift and go to state 60
    OR              shift and go to state 66
    EQUAL           shift and go to state 65
    NEQUAL          shift and go to state 64
    LTHANEQ         shift and go to state 69
    LTHAN           shift and go to state 67
    GTHANEQ         shift and go to state 72
    GTHAN           shift and go to state 63

    binop                          shift and go to state 62

state 33

    (37) AE -> INTCONST .

    DO              reduce using rule 37 (AE -> INTCONST .)
    PLUS            reduce using rule 37 (AE -> INTCONST .)
    MINUS           reduce using rule 37 (AE -> INTCONST .)
    STAR            reduce using rule 37 (AE -> INTCONST .)
    DIV             reduce using rule 37 (AE -> INTCONST .)
    MOD             reduce using rule 37 (AE -> INTCONST .)
    AND             reduce using rule 37 (AE -> INTCONST .)
    OR              reduce using rule 37 (AE -> INTCONST .)
    EQUAL           reduce using rule 37 (AE -> INTCONST .)
    NEQUAL          reduce using rule 37 (AE -> INTCONST .)
    LTHANEQ         reduce using rule 37 (AE -> INTCONST .)
    LTHAN           reduce using rule 37 (AE -> INTCONST .)
    GTHANEQ         reduce using rule 37 (AE -> INTCONST .)
    GTHAN           reduce using rule 37 (AE -> INTCONST .)
    THEN            reduce using rule 37 (AE -> INTCONST .)
    RPAREN          reduce using rule 37 (AE -> INTCONST .)
    SEMICOLON       reduce using rule 37 (AE -> INTCONST .)
    RSQUARE         reduce using rule 37 (AE -> INTCONST .)


state 34

    (36) AE -> INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 75


state 35

    (39) AE -> FALSE .

    DO              reduce using rule 39 (AE -> FALSE .)
    PLUS            reduce using rule 39 (AE -> FALSE .)
    MINUS           reduce using rule 39 (AE -> FALSE .)
    STAR            reduce using rule 39 (AE -> FALSE .)
    DIV             reduce using rule 39 (AE -> FALSE .)
    MOD             reduce using rule 39 (AE -> FALSE .)
    AND             reduce using rule 39 (AE -> FALSE .)
    OR              reduce using rule 39 (AE -> FALSE .)
    EQUAL           reduce using rule 39 (AE -> FALSE .)
    NEQUAL          reduce using rule 39 (AE -> FALSE .)
    LTHANEQ         reduce using rule 39 (AE -> FALSE .)
    LTHAN           reduce using rule 39 (AE -> FALSE .)
    GTHANEQ         reduce using rule 39 (AE -> FALSE .)
    GTHAN           reduce using rule 39 (AE -> FALSE .)
    THEN            reduce using rule 39 (AE -> FALSE .)
    RPAREN          reduce using rule 39 (AE -> FALSE .)
    SEMICOLON       reduce using rule 39 (AE -> FALSE .)
    RSQUARE         reduce using rule 39 (AE -> FALSE .)


state 36

    (33) AE -> lhs .
    (30) lhs -> lhs . LSQUARE AE RSQUARE
    (24) SE -> lhs . EQUALS AE
    (25) SE -> lhs . INCREMENT
    (26) SE -> lhs . DECREMENT

    DO              reduce using rule 33 (AE -> lhs .)
    PLUS            reduce using rule 33 (AE -> lhs .)
    MINUS           reduce using rule 33 (AE -> lhs .)
    STAR            reduce using rule 33 (AE -> lhs .)
    DIV             reduce using rule 33 (AE -> lhs .)
    MOD             reduce using rule 33 (AE -> lhs .)
    AND             reduce using rule 33 (AE -> lhs .)
    OR              reduce using rule 33 (AE -> lhs .)
    EQUAL           reduce using rule 33 (AE -> lhs .)
    NEQUAL          reduce using rule 33 (AE -> lhs .)
    LTHANEQ         reduce using rule 33 (AE -> lhs .)
    LTHAN           reduce using rule 33 (AE -> lhs .)
    GTHANEQ         reduce using rule 33 (AE -> lhs .)
    GTHAN           reduce using rule 33 (AE -> lhs .)
    THEN            reduce using rule 33 (AE -> lhs .)
    RPAREN          reduce using rule 33 (AE -> lhs .)
    SEMICOLON       reduce using rule 33 (AE -> lhs .)
    RSQUARE         reduce using rule 33 (AE -> lhs .)
    LSQUARE         shift and go to state 47
    EQUALS          shift and go to state 46
    INCREMENT       shift and go to state 45
    DECREMENT       shift and go to state 48


state 37

    (58) unop -> NOT .

    LPAREN          reduce using rule 58 (unop -> NOT .)
    INPUT           reduce using rule 58 (unop -> NOT .)
    INTCONST        reduce using rule 58 (unop -> NOT .)
    TRUE            reduce using rule 58 (unop -> NOT .)
    FALSE           reduce using rule 58 (unop -> NOT .)
    NEW             reduce using rule 58 (unop -> NOT .)
    MINUS           reduce using rule 58 (unop -> NOT .)
    NOT             reduce using rule 58 (unop -> NOT .)
    IDENTIFIER      reduce using rule 58 (unop -> NOT .)
    INCREMENT       reduce using rule 58 (unop -> NOT .)
    DECREMENT       reduce using rule 58 (unop -> NOT .)


state 38

    (34) AE -> SE .

    DO              reduce using rule 34 (AE -> SE .)
    PLUS            reduce using rule 34 (AE -> SE .)
    MINUS           reduce using rule 34 (AE -> SE .)
    STAR            reduce using rule 34 (AE -> SE .)
    DIV             reduce using rule 34 (AE -> SE .)
    MOD             reduce using rule 34 (AE -> SE .)
    AND             reduce using rule 34 (AE -> SE .)
    OR              reduce using rule 34 (AE -> SE .)
    EQUAL           reduce using rule 34 (AE -> SE .)
    NEQUAL          reduce using rule 34 (AE -> SE .)
    LTHANEQ         reduce using rule 34 (AE -> SE .)
    LTHAN           reduce using rule 34 (AE -> SE .)
    GTHANEQ         reduce using rule 34 (AE -> SE .)
    GTHAN           reduce using rule 34 (AE -> SE .)
    THEN            reduce using rule 34 (AE -> SE .)
    RPAREN          reduce using rule 34 (AE -> SE .)
    SEMICOLON       reduce using rule 34 (AE -> SE .)
    RSQUARE         reduce using rule 34 (AE -> SE .)


state 39
